[gd_scene format=3 uid="uid://jyncanbkjjnq"]

[ext_resource type="Script" uid="uid://c1ra6l46652u8" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="AudioStream" uid="uid://eqlentp01xuq" path="res://player/sounds/footsteps/footstep_1.wav" id="2_2ieo8"]
[ext_resource type="AudioStream" uid="uid://by8dmshhu4ejq" path="res://player/sounds/footsteps/footstep_2.wav" id="3_ebec5"]
[ext_resource type="AudioStream" uid="uid://dqxxb37fiv0jn" path="res://player/sounds/footsteps/footstep_3.wav" id="4_yllr7"]
[ext_resource type="AudioStream" uid="uid://q5abfjpo42gh" path="res://player/sounds/footsteps/footstep_4.wav" id="5_kb6p2"]
[ext_resource type="AudioStream" uid="uid://6a0ibe1xisjr" path="res://player/sounds/footsteps/footstep_5.wav" id="6_wodsf"]
[ext_resource type="AudioStream" uid="uid://daep1n0g0sf5i" path="res://player/sounds/footsteps/footstep_6.wav" id="7_32hag"]
[ext_resource type="AudioStream" uid="uid://4wygyk7vbfl" path="res://player/sounds/footsteps/footstep_7.wav" id="8_tqiix"]
[ext_resource type="AudioStream" uid="uid://b8j5dvefv2fmt" path="res://player/sounds/footsteps/footstep_8.wav" id="9_e7oew"]
[ext_resource type="AudioStream" uid="uid://48xt4llun7t8" path="res://player/sounds/footsteps/footstep_9.wav" id="10_c35mf"]
[ext_resource type="AudioStream" uid="uid://dly32slohyd7p" path="res://player/sounds/footsteps/footstep_10.wav" id="11_65viv"]
[ext_resource type="PackedScene" uid="uid://u6c80onqkda5" path="res://player/player_interactor.tscn" id="12_32hag"]
[ext_resource type="Script" uid="uid://cmpefrfbpmpfh" path="res://Core/Atributes/attribute.gd" id="12_kb6p2"]
[ext_resource type="PackedScene" uid="uid://302hr8kg3v2m" path="res://player/attack_ray.tscn" id="13_s7qer"]
[ext_resource type="Shader" uid="uid://w77bset6y6lr" path="res://Shaders/Blur.gdshader" id="13_wodsf"]
[ext_resource type="PackedScene" uid="uid://bipkxexwec852" path="res://Misc/Button/button.tscn" id="14_32hag"]
[ext_resource type="PackedScene" uid="uid://ctg7b5wmmvv2x" path="res://player/healing_ray.tscn" id="14_g4c7l"]
[ext_resource type="PackedScene" uid="uid://b0mf3l56dvooj" path="res://Misc/Pause/pause_menu.tscn" id="15_wodsf"]
[ext_resource type="PackedScene" uid="uid://d3wcfc0ylu5pt" path="res://Misc/DamageEffect/DamageEffect.tscn" id="16_knn7v"]
[ext_resource type="PackedScene" uid="uid://duusv3d7l63yw" path="res://Misc/GUI/GUI.tscn" id="17_s7qer"]
[ext_resource type="Script" uid="uid://8iq1i41swaai" path="res://Core/Equipment/equipment_manager.gd" id="17_tqiix"]
[ext_resource type="PackedScene" uid="uid://c7dtspqdgdomo" path="res://Masks/mask.tscn" id="18_e7oew"]
[ext_resource type="Resource" uid="uid://dv22k7qfivwud" path="res://Masks/Tracking/tracking_mask.tres" id="19_bjvpn"]
[ext_resource type="Resource" uid="uid://dtihwdcrq4iuv" path="res://Masks/Diagnostic/diagnostic_mask.tres" id="20_s7qer"]
[ext_resource type="Resource" uid="uid://c0ewi2fd2rsgb" path="res://Masks/Combat/combat_mask.tres" id="21_g4c7l"]
[ext_resource type="PackedScene" uid="uid://bbgqe6efr3jeg" path="res://Interaction/weapon.tscn" id="26_7pqkx"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oul6g"]
radius = 0.4
height = 1.85

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oul6g"]
radius = 0.4
height = 1.85

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tqiix"]
shader = ExtResource("13_wodsf")
shader_parameter/blur_amount = 1.5690001695275
shader_parameter/mix_amount = 0.0850000040375
shader_parameter/color_over = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e7oew"]
font_size = 67

[sub_resource type="Animation" id="Animation_knn7v"]
resource_name = "Damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.425, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/vignette_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.254000012065, 0.254000012065]
}

[sub_resource type="Animation" id="Animation_rptt4"]
resource_name = "LowerHealth"

[sub_resource type="Animation" id="Animation_7pqkx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/vignette_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.254000012065]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uw77l"]
_data = {
&"Damage": SubResource("Animation_knn7v"),
&"LowerHealth": SubResource("Animation_rptt4"),
&"RESET": SubResource("Animation_7pqkx")
}

[node name="Player" type="CharacterBody3D" unique_id=1158226171 groups=["Damageable", "Player"]]
collision_layer = 16
collision_mask = 7
script = ExtResource("1_oul6g")
footstep_sound = Array[AudioStream]([ExtResource("2_2ieo8"), ExtResource("3_ebec5"), ExtResource("4_yllr7"), ExtResource("5_kb6p2"), ExtResource("6_wodsf"), ExtResource("7_32hag"), ExtResource("8_tqiix"), ExtResource("9_e7oew"), ExtResource("10_c35mf"), ExtResource("11_65viv")])

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=2102996876]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925, 0)
mesh = SubResource("CapsuleMesh_oul6g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1063445224]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925, 0)
shape = SubResource("CapsuleShape3D_oul6g")

[node name="HeadPosition" type="Node3D" parent="." unique_id=1566377640]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="LandingAnimation" type="Node3D" parent="HeadPosition" unique_id=478798203]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="HeadPosition/LandingAnimation" unique_id=1738730421]
unique_name_in_owner = true
cull_mask = 1

[node name="Interactor" parent="HeadPosition/LandingAnimation/Camera3D" unique_id=553457367 instance=ExtResource("12_32hag")]
unique_name_in_owner = true
target_position = Vector3(0, 0, -3)

[node name="MeleeAttack" parent="HeadPosition/LandingAnimation/Camera3D" unique_id=1643040456 instance=ExtResource("13_s7qer")]
unique_name_in_owner = true

[node name="ShootingAttack" parent="HeadPosition/LandingAnimation/Camera3D" unique_id=916945525 instance=ExtResource("13_s7qer")]
unique_name_in_owner = true
cooldown = 1.0

[node name="Heal" parent="HeadPosition/LandingAnimation/Camera3D" unique_id=1577422798 instance=ExtResource("14_g4c7l")]
unique_name_in_owner = true
cooldown = 1.0

[node name="CeilingDetector" type="RayCast3D" parent="." unique_id=1255637517]
target_position = Vector3(0, 2.1, 0)

[node name="FootstepSound" type="AudioStreamPlayer" parent="." unique_id=683822276]
volume_db = -20.0
max_polyphony = 10

[node name="Health" type="Node" parent="." unique_id=607692312]
script = ExtResource("12_kb6p2")
_starting_value = 100.0
has_max_value = true
max_value = 100.0
metadata/_custom_type_script = "uid://cmpefrfbpmpfh"

[node name="UI" type="CanvasLayer" parent="." unique_id=2118645892]

[node name="ColorRect" parent="UI" unique_id=749762147 instance=ExtResource("16_knn7v")]

[node name="HUD" type="Control" parent="UI" unique_id=1836050831]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="Control" parent="UI/HUD" unique_id=442683083]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/HUD/Crosshair" unique_id=1996728416]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="UI/HUD/Crosshair" unique_id=1853978242]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="GUI" parent="UI" unique_id=76367185 instance=ExtResource("17_s7qer")]

[node name="DeathUI" type="Control" parent="UI" unique_id=1402694153]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/DeathUI" unique_id=1935610368]
material = SubResource("ShaderMaterial_tqiix")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DeathUI" unique_id=840732027]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 273.0
offset_top = 115.0
offset_right = -273.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 94

[node name="Label" type="Label" parent="UI/DeathUI/VBoxContainer" unique_id=1899422359]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_e7oew")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" parent="UI/DeathUI/VBoxContainer" unique_id=369440333 instance=ExtResource("14_32hag")]
layout_mode = 2
theme_override_font_sizes/font_size = 58

[node name="PauseMenu" parent="UI" unique_id=1869559949 instance=ExtResource("15_wodsf")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI" unique_id=867306733]
libraries/ = SubResource("AnimationLibrary_uw77l")

[node name="MasksManager" type="Node" parent="." unique_id=467696698]
unique_name_in_owner = true
script = ExtResource("17_tqiix")
metadata/_custom_type_script = "uid://8iq1i41swaai"

[node name="TrackingMask" parent="MasksManager" unique_id=1789686496 instance=ExtResource("18_e7oew")]
unique_name_in_owner = true
activate_mask_index = 0
equip_input_action = &"Mask1"
resource = ExtResource("19_bjvpn")

[node name="DiagnosticMask" parent="MasksManager" unique_id=1053106305 node_paths=PackedStringArray("default_weapon") instance=ExtResource("18_e7oew")]
unique_name_in_owner = true
activate_mask_index = 2
default_weapon = NodePath("../../WeaponsManager/HealingRay")
equip_input_action = &"Mask2"
resource = ExtResource("20_s7qer")

[node name="CombatMask" parent="MasksManager" unique_id=158867615 node_paths=PackedStringArray("default_weapon") instance=ExtResource("18_e7oew")]
unique_name_in_owner = true
activate_mask_index = 1
default_weapon = NodePath("../../WeaponsManager/Gun")
equip_input_action = &"Mask3"
resource = ExtResource("21_g4c7l")

[node name="WeaponsManager" type="Node" parent="." unique_id=1640595648]
unique_name_in_owner = true
script = ExtResource("17_tqiix")
metadata/_custom_type_script = "uid://8iq1i41swaai"

[node name="Sword" parent="WeaponsManager" unique_id=747473693 instance=ExtResource("26_7pqkx")]
unique_name_in_owner = true

[node name="Gun" parent="WeaponsManager" unique_id=2042396883 instance=ExtResource("26_7pqkx")]
unique_name_in_owner = true

[node name="HealingRay" parent="WeaponsManager" unique_id=1820506878 instance=ExtResource("26_7pqkx")]
unique_name_in_owner = true

[connection signal="value_changed" from="Health" to="." method="_on_health_value_changed"]
[connection signal="equipped" from="MasksManager" to="." method="_on_mask_changed"]
[connection signal="equipped" from="WeaponsManager" to="." method="_on_weapon_equipped"]
